--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "material-design-lite": "^1.3.0",
     "morgan": "~1.8.1",
     "redis": "^2.7.1",
-    "serve-favicon": "~2.4.2"
+    "serve-favicon": "~2.4.2",
+    "vue-resource": "^1.3.4"
   }
 }
